--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
           java-version: ${{ matrix.jdk }}
       - run: unset _JAVA_OPTIONS
       - name: Run tests
-        run: ../scripts/testApp.sh
+        run: sudo ../scripts/testApp.sh
       - name: Post tests
         if: always()
         run: |
