--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
         if: always()
         run: |
           logsPath=$(sudo find . -name "console.log");
-          cat $logsPath | sudo grep Launching
+          sudo cat $logsPath | sudo grep Launching
       - name: Archive server logs if failed
         if: failure()
         uses: actions/upload-artifact@v2
