--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
 name: Test application
 
 on:
@@ -34,22 +31,22 @@ jobs:
       run:
         working-directory: finish
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - run: unset _JAVA_OPTIONS
-    - name: Run tests
-      run: chmod +x ../scripts/travisTest.sh && ../scripts/travisTest.sh
-    - name: Post tests
-      if: always()
-      run: |
-          logsPath=$(find . -name "console.log");
-          cat $logsPath | grep Launching
-    - name: Archive server logs if failed
-      if: failure()
-      uses: actions/upload-artifact@v2
-      with:
-        name: server-logs
-        path: finish/target/liberty/wlp/usr/servers/defaultServer/logs/
+      - uses: actions/checkout@v2
+      - name: Set up JDK 8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 8
+      - run: unset _JAVA_OPTIONS
+      - name: Run tests
+        run: sudo ../scripts/testApp.sh
+      - name: Post tests
+        if: always()
+        run: |
+          logsPath=$(sudo find . -name "console.log");
+          sudo cat $logsPath | sudo grep Launching
+      - name: Archive server logs if failed
+        if: failure()
+        uses: actions/upload-artifact@v2
+        with:
+          name: server-logs
+          path: finish/target/liberty/wlp/usr/servers/defaultServer/logs/
