--- a/finish/pom.xml
+++ b/finish/pom.xml
@@ -84,7 +84,9 @@
                 <artifactId>liberty-maven-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <liberty.runtime.version>22.0.0.2</liberty.runtime.version>
+                    <install>
+                        <version>22.0.0.2</version>
+                    </install>
                 </configuration>
             </plugin>
             <!-- Plugin to run functional tests -->
